[package]
name = "oss"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.104.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
